# kitsune-stt

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  melfilters128.bytes
.cargo/: config.toml
.github/workflows/: ci.yml
src/: audio.rs  download.rs  main.rs  model.rs
src/audio/: tests.rs
src/download/: tests.rs
src/model/: tests.rs
