[package]
name = "kitsune-stt"
description = "Speech-to-Text model using Candle and Voxtral"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
candle = { package = "candle-core", version = "0.9.2-alpha.1" }
candle-nn = { version = "0.9.2-alpha.1" }
candle-transformers = { version = "0.9.2-alpha.1" }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tekken = { package = "tekken-rs", version = "0.1.1" }
symphonia = { version = "0.5.3", features = ["all"]}
rubato = { version = "0.15.0" }
bindgen_cuda = { version = "0.1.1", optional = true }

[features]
default = []
cuda = [
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
