[package]
name = "kitsune-stt"
description = "Speech-to-Text tool using Candle and Voxtral"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/paazmaya/kitsune-stt"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.5", optional = true }
byteorder = "1.5.0"
candle-core = "0.9.2-alpha.1"
candle-nn = "0.9.2-alpha.1"
candle-transformers = "0.9.2-alpha.1"
clap = { version = "4.5.51", features = ["derive"] }
hf-hub = "0.4.3"
rubato = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
symphonia = { version = "0.5.5", features = ["all"] }
tekken = { package = "tekken-rs", version = "0.1.1" }

[dev-dependencies]
# Testing utilities
tempfile = "3.23.0"

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
